--- a/style.css
+++ b/style.css
@@ -1,14 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,200&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
 }
 
-body {
+html {
+  background-color: #fceeee;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header nav ul {
+  list-style: none;
+}
+
+.menu {
+  padding: 50px 0;
+}
+
+.header .menu-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.header .menu-list li:hover {
+  transform: scale(1.05);
+}
+
+.header .menu-list a {
+  color: #2e2e2e;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 1rem 2rem;
+}
+
+.header .menu-list span {
+  position: relative;
+}
+
+.header .menu-list a::before {
+  content: '';
+  background-color: #2e2e2e;
+  width: 50px;
+  height: 2px;
+  position: absolute;
+  top: 20px;
+}
+
+@keyframes border-bottom {
+  from {
+    opacity: 1;
+  }
 }
