--- a/style.css
+++ b/style.css
@@ -32,36 +32,30 @@ a {
 .header .menu-list {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.header .menu-list li:hover {
-  transform: scale(1.05);
+  gap: 40px;
 }
 
 .header .menu-list a {
   color: #2e2e2e;
   font-weight: bold;
   letter-spacing: 2px;
-  padding: 1rem 2rem;
-}
-
-.header .menu-list span {
+  padding: 16px 0;
   position: relative;
 }
 
 .header .menu-list a::before {
   content: '';
+  display: block;
+  width: 0%;
   background-color: #2e2e2e;
-  width: 50px;
-  height: 2px;
+  height: 2.5px;
+  border-radius: 2px;
   position: absolute;
-  top: 20px;
+  bottom: 10px;
+  left: 0px;
+  transition: all 0.25s;
 }
 
-@keyframes border-bottom {
-  from {
-    opacity: 1;
-  }
+.header .menu-list a:hover::before {
+  width: 100%;
 }
