estilização do titulo e imagem da main

--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ a {
   text-decoration: none;
 }
 
+/* Header */
+
 .header nav ul {
   list-style: none;
 }
@@ -32,7 +34,7 @@ a {
 .header .menu-list {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 100px;
 }
 
 .header .menu-list a {
@@ -53,9 +55,76 @@ a {
   position: absolute;
   bottom: 10px;
   left: 0px;
-  transition: all 0.25s;
+  transition: all 0.2s;
 }
 
 .header .menu-list a:hover::before {
   width: 100%;
+}
+
+/* Main/Conteudo */
+
+.main {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding: 20px;
+
+  display: grid;
+  grid-template-areas:
+    'titulo img'
+    'corpo corpo'
+    'carrossel carrossel'
+    'doutrina doutrina'
+    'footer footer';
+}
+
+#title {
+  grid-area: titulo;
+  font-size: 44px;
+  text-align: end;
+  align-self: center;
+  padding: 10px;
+}
+
+#img-div {
+  grid-area: img;
+  padding: 10px;
+}
+
+.main-image {
+  position: relative;
+}
+.main-image .image {
+  background-image: url('./img/Therese_von_Lisieux.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: -100px;
+  width: 100%;
+  height: 250px;
+
+  border-radius: 4px;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+#img-caption {
+  letter-spacing: 1px;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  border-radius: 4px;
+}
+
+/* footer */
+#footer {
+  color: white;
+  background-color: #2e2e2e;
+  padding: 40px;
+}
+blockquote {
+  font-size: 18px;
+  font-style: italic;
+  text-align: center;
 }
