--- a/style.css
+++ b/style.css
@@ -269,9 +269,12 @@ h2 {
   padding: 40px;
 }
 blockquote {
-  font-size: 18px;
+  font-size: 24px;
   font-style: italic;
   text-align: center;
+  padding: 20px;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 blockquote:before,
