--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ h2 {
 }
 
 .crono h2 {
+  text-align: center;
   margin-bottom: 20px;
   position: relative;
 }
@@ -160,9 +161,20 @@ h2 {
 .crono ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0px 5px;
-  gap: 10px 100px;
+  justify-items: center;
   list-style: none;
+  position: relative;
+}
+
+.crono ul:after {
+  content: '';
+  width: 2px;
+  height: calc(100% - 80px - 75px);
+  background-color: #2e2e2e;
+  border-radius: 5px;
+  position: absolute;
+  top: 75px;
+  left: 50%;
 }
 
 .crono-card {
@@ -186,6 +198,101 @@ h2 {
 
 .crono-card p {
   padding: 5px;
+  text-align: center;
+}
+
+.crono-card:hover {
+  outline: 5px solid red;
+  transition: all 0.5s;
+}
+
+.crono-card:nth-child(1):hover::after,
+.crono-card:nth-child(4):hover::after,
+.crono-card:nth-child(7):hover::after,
+.crono-card:nth-child(10):hover::after,
+.crono-card:nth-child(13):hover::after,
+.crono-card:nth-child(16):hover::after,
+.crono-card:nth-child(19):hover::after,
+.crono-card:nth-child(22):hover::after,
+.crono-card:nth-child(25):hover::after,
+.crono-card:nth-child(28):hover::after,
+.crono-card:nth-child(31):hover::after,
+.crono-card:nth-child(34):hover::after,
+.crono-card:nth-child(37):hover::after {
+  content: '';
+  height: 2px;
+  animation: move 0.6s ease forwards;
+  background-color: #2e2e2e;
+  position: absolute;
+  border-radius: 5px;
+  z-index: -1;
+}
+
+.crono-card:nth-child(1):hover::after,
+.crono-card:nth-child(7):hover::after,
+.crono-card:nth-child(13):hover::after,
+.crono-card:nth-child(19):hover::after,
+.crono-card:nth-child(25):hover::after,
+.crono-card:nth-child(31):hover::after,
+.crono-card:nth-child(37):hover::after {
+  right: 50%;
+}
+
+.crono-card:nth-child(4):hover::after,
+.crono-card:nth-child(10):hover::after,
+.crono-card:nth-child(16):hover::after,
+.crono-card:nth-child(22):hover::after,
+.crono-card:nth-child(28):hover::after,
+.crono-card:nth-child(34):hover::after {
+  left: 50%;
+}
+.crono-card:nth-child(1):hover::after {
+  top: 75px;
+}
+.crono-card:nth-child(4):hover::after {
+  top: calc(75px + 150px);
+}
+.crono-card:nth-child(7):hover::after {
+  top: calc(75px + 300px);
+}
+.crono-card:nth-child(10):hover::after {
+  top: calc(75px + 450px);
+}
+.crono-card:nth-child(13):hover::after {
+  top: calc(75px + 600px);
+}
+.crono-card:nth-child(16):hover::after {
+  top: calc(75px + 750px);
+}
+.crono-card:nth-child(19):hover::after {
+  top: calc(75px + 900px);
+}
+.crono-card:nth-child(22):hover::after {
+  top: calc(75px + 1050px);
+}
+.crono-card:nth-child(25):hover::after {
+  top: calc(75px + 1200px);
+}
+.crono-card:nth-child(28):hover::after {
+  top: calc(75px + 1350px);
+}
+.crono-card:nth-child(31):hover::after {
+  top: calc(75px + 1500px);
+}
+.crono-card:nth-child(34):hover::after {
+  top: calc(75px + 1650px);
+}
+.crono-card:nth-child(37):hover::after {
+  top: calc(75px + 1800px);
+}
+
+@keyframes move {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 65px;
+  }
 }
 
 /* Doutrina */
