estilização dos icons

--- a/style.css
+++ b/style.css
@@ -358,3 +358,13 @@ blockquote::after {
   top: 40px;
   content: '”';
 }
+
+.social-media {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.social-media img {
+  width: 44px;
+}
