--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@
 }
 
 html {
-  background-color: #fceeee;
+  background-color: var(--color-1);
+  color: var(--color-7);
+}
+
+body {
 }
 
 img {
@@ -426,6 +430,7 @@ h2 {
   display: flex;
   flex-direction: column;
   max-width: 960px;
+  margin-bottom: 40px;
 }
 
 .gallery-container {
@@ -444,8 +449,8 @@ h2 {
 .img-9 {
   background-size: cover;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 300px;
+  width: 320px;
+  height: 320px;
 }
 
 .img-1 {
@@ -496,8 +501,8 @@ h2 {
 #footer {
   grid-area: footer;
   height: 40vh;
-  color: white;
-  background-color: #2e2e2e;
+  color: var(--color-1);
+  background-color: var(--color-7);
   padding: 20px 40px;
 
   display: flex;
@@ -537,4 +542,5 @@ blockquote::after {
 
 .social-media img {
   width: 44px;
+  height: 44px;
 }
