--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2 {
 }
 
 .header .menu-list a {
-  color: #2e2e2e;
+  color: var(--color-7);
   font-weight: bold;
   letter-spacing: 2px;
   padding: 16px 0;
@@ -65,7 +65,7 @@ h2 {
   content: '';
   display: block;
   width: 0%;
-  background-color: #2e2e2e;
+  background-color: var(--color-7);
   height: 2.5px;
   border-radius: 2px;
   position: absolute;
@@ -132,7 +132,7 @@ h2 {
   left: 10px;
   padding: 5px;
   font-size: 18px;
-  color: #fff;
+  color: var(--color-1);
   border-radius: 4px;
 }
 
@@ -182,7 +182,7 @@ h2 {
   content: '';
   width: 2px;
   height: calc(100% - 80px - 70px);
-  background-color: #2e2e2e;
+  background-color: var(--color-6);
   border-radius: 5px;
   position: absolute;
   top: 75px;
@@ -199,9 +199,9 @@ h2 {
 
 .crono-card span {
   text-align: center;
-  background-color: #2e2e2e;
+  background-color: var(--color-6);
   display: block;
-  color: #fff;
+  color: var(--color-1);
   padding: 10px;
   border-radius: 5px 5px 0px 0px;
 
@@ -215,7 +215,7 @@ h2 {
 }
 
 .crono-card:hover {
-  outline: 5px solid red;
+  outline: 2px solid var(--color-6);
   transition: all 0.5s;
 }
 
@@ -237,7 +237,7 @@ h2 {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background-color: #2e2e2e;
+  background-color: var(--color-6);
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -277,7 +277,7 @@ h2 {
   content: '';
   height: 3px;
   animation: move-reverse 0.6s ease forwards;
-  background-color: #2e2e2e;
+  background-color: var(--color-6);
   position: absolute;
   border-radius: 5px;
   z-index: -1;
@@ -299,7 +299,7 @@ h2 {
   content: '';
   height: 3px;
   animation: move 0.6s ease forwards;
-  background-color: #2e2e2e;
+  background-color: var(--color-6);
   position: absolute;
   border-radius: 5px;
   z-index: -1;
