--- a/style.css
+++ b/style.css
@@ -478,23 +478,19 @@ h2 {
 /* footer */
 #footer {
   grid-area: footer;
-  height: 40vh;
+  height: 30vh;
   color: var(--color-1);
   background-color: var(--color-7);
   padding: 20px 40px;
-
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 blockquote {
-  font-size: 24px;
+  font-size: 28px;
   font-style: italic;
   text-align: center;
-  padding: 20px;
-  max-width: 960px;
-  margin: 0 auto;
+  width: 960px;
+  margin: auto;
 }
 
 blockquote:before,
@@ -514,11 +510,42 @@ blockquote::after {
 
 .social-media {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  gap: 20px;
+  padding: 10px;
+  position: relative;
 }
 
-.social-media img {
-  width: 44px;
-  height: 44px;
+.social-media span {
+  color: var(--color-3);
+}
+
+.social-media::after {
+  content: '';
+  width: 2px;
+  height: 25vh;
+  background-color: rgba(97, 64, 36, 0.2);
+  position: absolute;
+  right: -40px;
+}
+
+.social-media p {
+  color: rgba(245, 247, 207, 0.3);
+  margin-bottom: 20px;
+}
+
+.social-link {
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+}
+.social-link a {
+  transition: all 0.2s;
+}
+.social-link a:hover {
+  transform: scale(1.1);
+}
+.social-link img {
+  width: 35px;
+  height: 35px;
 }
