--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;600;700&display=swap');
 
 :root {
   --color-1: #f5f7cf;
@@ -13,19 +14,20 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Raleway', sans-serif;
 }
 
 html {
+  font-family: 'Raleway', sans-serif;
   background-color: var(--color-1);
   color: var(--color-7);
 }
 
 body {
   background-image: url(./img/bg/hideout.svg);
-  background-size: 12px;
+  background-size: 10px;
   position: relative;
   z-index: -1;
+  font-weight: 500;
 }
 
 img {
@@ -39,6 +41,7 @@ a {
 }
 
 h2 {
+  font-family: 'Alegreya', serif;
   font-size: 28px;
   margin-bottom: 20px;
 }
@@ -59,12 +62,12 @@ h2 {
   margin-left: 20px;
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid red; */
 }
 
 .header .menu-list a {
   color: var(--color-7);
   font-weight: bold;
+  font-size: 18px;
   letter-spacing: 2px;
   padding: 16px 0;
   position: relative;
@@ -91,10 +94,10 @@ h2 {
 /* Main/Conteudo */
 
 .main {
+  /* font-family: 'Alegreya', sans-serif; */
+
   width: 960px;
   margin: 0 auto;
-  padding: 20px;
-
   display: grid;
   grid-template-areas:
     'img img'
@@ -108,6 +111,7 @@ h2 {
 }
 
 #title {
+  font-family: 'Alegreya', serif;
   grid-area: titulo;
   font-size: 44px;
   text-align: center;
@@ -478,18 +482,19 @@ h2 {
 /* footer */
 #footer {
   grid-area: footer;
-  height: 30vh;
+  height: 25vh;
   color: var(--color-1);
   background-color: var(--color-7);
   padding: 20px 40px;
   display: flex;
 }
 
-blockquote {
+#footer blockquote {
+  font-family: 'Alegreya';
   font-size: 28px;
   font-style: italic;
   text-align: center;
-  width: 960px;
+  max-width: 960px;
   margin: auto;
 }
 
@@ -508,7 +513,8 @@ blockquote::after {
   content: '”';
 }
 
-.social-media {
+#footer .social-media {
+  font-family: 'Raleway';
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -530,6 +536,8 @@ blockquote::after {
 }
 
 .social-media p {
+  text-align: end;
+  font-style: italic;
   color: rgba(245, 247, 207, 0.3);
   margin-bottom: 20px;
 }
