--- a/style.css
+++ b/style.css
@@ -523,11 +523,13 @@ blockquote::after {
 }
 
 .social-media span {
+  font-family: 'Alegreya';
   color: var(--color-3);
 }
 
 .social-media::after {
   content: '';
+  display: block;
   width: 2px;
   height: 25vh;
   background-color: rgba(97, 64, 36, 0.2);
