--- a/project-2/style-2.css
+++ b/project-2/style-2.css
@@ -20,3 +20,181 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: var(--color-1);
+  font-family: Alegreya;
+  color: var(--color-7);
+}
+
+header {
+  font-family: 'Playfair Display SC', serif;
+  text-align: center;
+  font-size: 20px;
+  margin: 20px 0;
+  color: var(--color-6);
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-4);
+  font-weight: bold;
+}
+
+#img-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+#img-div img {
+  width: 800px;
+}
+
+#img-div figcaption {
+  font-size: 18px;
+}
+
+#tribute-info,
+#doutrina,
+.crono,
+#galeria,
+#referencia {
+  width: 960px;
+  margin: 40px auto;
+}
+
+#tribute-info h2,
+.crono h2,
+#doutrina h2,
+#galeria h2,
+#referencia h2 {
+  text-align: center;
+  font-size: 26px;
+  margin-bottom: 10px;
+  color: var(--color-6);
+}
+
+#tribute-info p,
+#doutrina p,
+#referencia p {
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  text-align: justify;
+  text-indent: 20px;
+}
+
+.crono ul {
+  list-style: square;
+}
+
+.crono-card {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.crono-card span {
+  font-weight: bold;
+  color: var(--color-6);
+}
+
+.gallery {
+  grid-area: gallery;
+  display: flex;
+  flex-direction: column;
+  max-width: 960px;
+  margin-bottom: 40px;
+}
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.img-1,
+.img-2,
+.img-3,
+.img-4,
+.img-5,
+.img-6,
+.img-7,
+.img-8,
+.img-9 {
+  object-fit: cover;
+  object-position: center;
+  width: 320px;
+  height: 320px;
+}
+
+#footer {
+  width: auto;
+  color: var(--color-1);
+  background-color: var(--color-7);
+  display: flex;
+}
+
+#footer blockquote {
+  font-family: 'Alegreya';
+  font-size: 28px;
+  font-style: italic;
+  text-align: center;
+  width: 960px;
+  margin: auto;
+  padding: 40px;
+}
+
+blockquote:before,
+blockquote::after {
+  font-family: none;
+  font-size: 50px;
+  position: relative;
+}
+
+blockquote::before {
+  content: '“';
+}
+blockquote::after {
+  top: 10px;
+  content: '”';
+}
+
+#footer .social-media {
+  font-family: 'Raleway';
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  padding: 40px;
+  border-right: 2px solid rgba(97, 64, 36, 0.2);
+}
+
+.social-media span {
+  font-family: 'Alegreya';
+  color: var(--color-3);
+}
+
+.social-media p {
+  text-align: end;
+  font-style: italic;
+  color: rgba(245, 247, 207, 0.3);
+  margin-bottom: 20px;
+}
+
+.social-link {
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+}
+.social-link a {
+  transition: all 0.2s;
+}
+.social-link a:hover {
+  transform: scale(1.1);
+}
+.social-link img {
+  width: 35px;
+  height: 35px;
+}
